src/objects/Marketing_Plan_and_Industry_Events__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for Report</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_or_Activity_Description__c</fullName>
        <label>Campaign or Activity Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Marketing Activity</fullName>
                </value>
                <value>
                    <fullName>Industry Events - Trade Shows</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_or_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Social media lead generation campaign</fullName>
                </value>
                <value>
                    <fullName>‎Workshop</fullName>
                </value>
                <value>
                    <fullName>‎Road-show</fullName>
                </value>
                <value>
                    <fullName>‎Private event</fullName>
                </value>
                <value>
                    <fullName>‎Event sponsorship</fullName>
                </value>
                <value>
                    <fullName>‎Demo equipment</fullName>
                </value>
                <value>
                    <fullName>‎EDM (Electronic direct email) campaign</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>‎Social media messages</fullName>
                </value>
                <value>
                    <fullName>‎Landing page / dedicated website for solution or product</fullName>
                </value>
                <value>
                    <fullName>‎Telemarketing activity</fullName>
                </value>
                <value>
                    <fullName>‎Corporate campaign</fullName>
                </value>
                <value>
                    <fullName>‎Co-marketing campaign with lead generation</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>PR (press release, case studies, project wins, etc.)</fullName>
                </value>
                <value>
                    <fullName>Promotional materials (giveaways, roll-up, etc.)</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                    <isActive>false</isActive>
                    <label>Digital Media</label>
                </value>
                <value>
                    <fullName>Industry Events - Trade Shows</fullName>
                    <isActive>false</isActive>
                    <label>Industry Events - Trade Shows</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Traditional Marketing Activity</fullName>
                    <isActive>false</isActive>
                    <label>Traditional Marketing Activity</label>
                </value>
                <value>
                    <fullName>Web-based proposals</fullName>
                    <isActive>false</isActive>
                    <label>Web-based proposals</label>
                </value>
                <value>
                    <fullName>‎Co-marketing campaign</fullName>
                    <isActive>false</isActive>
                    <label>‎Co-marketing campaign</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_op__c</fullName>
        <label>Amount to be covered by Co-op</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Stories__c</fullName>
        <label>Customer Success Stories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Benefit_Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Benefit/ Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Cost_of_the_Activity__c</fullName>
        <label>Expected Cost of the Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Financial_Outcome__c</fullName>
        <label>Expected Financial Outcome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Total_Cost_of_the_Activity__c</fullName>
        <formula>Co_op__c  +  Partner_Fund__c  +  MDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Total Cost of the Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Outcome_Result__c</fullName>
        <label>Financial Outcome Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>&lt;100k</fullName>
                </value>
                <value>
                    <fullName>100k – 250k</fullName>
                </value>
                <value>
                    <fullName>250k – 500k</fullName>
                </value>
                <value>
                    <fullName>500k – 1M</fullName>
                </value>
                <value>
                    <fullName>1M - 2M</fullName>
                </value>
                <value>
                    <fullName>2M - 5M</fullName>
                </value>
                <value>
                    <fullName>&gt;5M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_Product_Related_to_the_Activity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identify Solution(s) or Product(s)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <defaultValue>&apos;In this section please enter the marketing actions which you deem necessary to reach agreed target market / segments or associated projects. Include social media and web-based proposals.&apos; &amp;  BR()  &amp;  BR()  &amp; &apos;Please create a record for each planned marketing campaign or activity, and attach a relevant plan or document on the RELATED tab of Business Plan.&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Introduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDF__c</fullName>
        <label>Amount to be covered by MDF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_and_Industry_Events_BP__c</fullName>
        <label>Business Plan ID</label>
        <referenceTo>Business_Plan__c</referenceTo>
        <relationshipName>Marketing_Plan_and_Industry_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>No_Cost__c</fullName>
        <label>No Cost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Expected_Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Number of Leads, Branding, Promotion</inlineHelpText>
        <label>Other Expected Benefits</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Outcome_Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Number of Leads, Branding, Promotion</inlineHelpText>
        <label>Other Outcome Benefits</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Company_Partner_Prime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Company Partner Prime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Fund__c</fullName>
        <label>Amount to be Funded by Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provide_the_Campaign_or_Activity_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Requested_Funding__c</fullName>
        <label>Source of Requested Funding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Funds</fullName>
                </value>
                <value>
                    <fullName>Coop</fullName>
                </value>
                <value>
                    <fullName>MDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Planned&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Market_Segments_Project__c</fullName>
        <label>Target Market/ Segments/Project</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business &amp; Professional Services</fullName>
                </value>
                <value>
                    <fullName>Cable MSO</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Education – Higher</fullName>
                </value>
                <value>
                    <fullName>Education – K – 12</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government – Local and Provincial</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Highways</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Ports &amp; Airport</fullName>
                </value>
                <value>
                    <fullName>Public Safety</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Railways</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Telco (SP)</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities, Oil &amp; Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Date_of_Activity_Launched__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date of Activity Launched</label>
        <type>Date</type>
    </fields>
    <label>Marketing Plan</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Marketing Plan and Industry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Specify_No_Other_Activity_Type</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL( Campaign_or_Activity_Type__c , &apos;Other (please specify)&apos;) &amp;&amp;  !ISBLANK(Specify_Other__c)</errorConditionFormula>
        <errorDisplayField>Specify_Other__c</errorDisplayField>
        <errorMessage>You are only allowed to enter the value in this field if you select &quot;Other&quot; in Activity Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_Other_Activity_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Campaign_or_Activity_Type__c , &apos;Other (please specify)&apos;) &amp;&amp;  ISBLANK(Specify_Other__c)</errorConditionFormula>
        <errorDisplayField>Specify_Other__c</errorDisplayField>
        <errorMessage>Please specify other as you have selected &quot;Other&quot; in Activity Type</errorMessage>
    </validationRules>
</CustomObject>